set name variants; more vocab; reject on failed crop

--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -274,6 +274,7 @@
       "Spell Pierce",
       "Spell Queller",
       "Spellskite",
+      "Squandered Resources",
       "Stoneforge Mystic",
       "Strip Mine",
       "Sundering Titan",
@@ -331,6 +332,7 @@
       "Healing Salve",
       "Icatian Moneychanger",
       "Joven",
+      "Juju Bubble",
       "Lifelace",
       "Merfolk of the Pearl Trident",
       "Moss Monster",
@@ -359,6 +361,7 @@
     "Corrupted Zendikon",
     "Cruel Fate",
     "Cunning Bandit",
+    "Dread Specter",
     "Forest Bear",
     "Frog Tongue",
     "Goblin Bangchuckers",
@@ -366,12 +369,14 @@
     "Harabaz Druid",
     "Hazduhr the Abbot",
     "Hazy Homunculus",
+    "Heartwood Treefolk",
     "Horrible Hordes",
     "Hot Soup",
     "Hubris",
     "Hundroog",
     "It That Betrays",
     "Jungle Barrier",
+    "Kami of the Pale Moon",
     "Kezzerdrix",
     "Krark's Thumb",
     "Marble Titan",
@@ -398,6 +403,7 @@
     "Squeeze",
     "Takklemaggot",
     "That Which Was Taken",
+    "Undertow",
     "Urza's Guilt"
   ],
   "realNotableCard": [
@@ -420,6 +426,7 @@
     "Elvish Impersonators",
     "Energizer",
     "Enter the Dungeon",
+    "Evil Eye of Orms-by-Gore",
     "Giant Ambush Beetle",
     "Gilder Bairn",
     "Gleemax",
@@ -427,6 +434,7 @@
     "Hidetsugu's Second Rite",
     "Hanweir, the Writhing Township",
     "Hurloon Wrangler",
+    "Imaginary Pet",
     "Incite",
     "Island of Wak-Wak",
     "Jade Leech",
@@ -459,6 +467,7 @@
     "Sneaky Homunculus",
     "Steamflogger Boss",
     "Storm Cauldron",
+    "Sway of the Stars",
     "Tectonic Edge",
     "The Chain Veil",
     "The Cheese Stands Alone",
@@ -548,6 +557,7 @@
       "Earthquake",
       "Elvish Archers",
       "Evil Presence",
+      "Fallen Askari",
       "False Orders",
       "Farmstead",
       "Fastbond",
@@ -745,6 +755,7 @@
       "Wooden Sphere",
       "Word of Command",
       "Wrath of God",
+      "Zhalfrin Commander",
       "Zombie Master"
   ],
   "realLimitedFillerCard": [
@@ -753,7 +764,9 @@
   	"Instigator Gang",
   	"Kozilek's Pathfinder",
     "Scuzzback Marauders",
-  	"Spreading Flames"
+  	"Spreading Flames",
+    "Wandering Wolf",
+    "Weight of the Underworld"
   ],
   "wishCard": ["Death Wish",
     "Glittering Wish",
