--- a/src/data/grammar/mtg-decks.yaml
+++ b/src/data/grammar/mtg-decks.yaml
@@ -67,7 +67,8 @@
       "#creatureTypes.capitalize#vantage",
       "#creatureTypes.capitalize# [_parent:Dad,Dad,Dad,Mom]#_parent#",
       "[_prefix:#creatureTypes#,#deckPrefix#] Breakfast",
-      "#deckNameCompoundPrefix##deckNameCompoundSuffix#"
+      "#deckNameCompoundPrefix##deckNameCompoundSuffix#",
+      "Counter#creatureTypes.s#"
   ],
   "deckVariation" : [
     "#deck#",
