more FTV contents options

--- a/src/data/grammar/mtg-from-the-vault.yaml
+++ b/src/data/grammar/mtg-from-the-vault.yaml
@@ -5,6 +5,12 @@ _fromTheVaultVaultContents:
 - "#nouns#"
 - "#pluralNoun#"
 - "#massNoun#"
+- "#characterClass.s#"
+- "#creatureTypes.s#"
+- "#abstractNoun#"
+- "#emotion#"
+- "#gameConcept#"
+- "#adj#"
 
 _fromTheVaultLogoHtml: "#_fromTheVaultLogoStyle# #_fromTheVaultLogo#"
 
