--- a/src/data/grammar/nouns.yaml
+++ b/src/data/grammar/nouns.yaml
@@ -19,7 +19,8 @@
       "#cardCategory.s#",
       "#creatureTypes.s#",
       "#itemNoun.s#",
-      "#irregularPluralNoun#"
+      "#irregularPluralNoun#",
+      "#placeNoun.s#"
   ],
   "aNoun": [
       "#cardCategory.a#",
@@ -53,7 +54,7 @@
       "grimoire", "chalice", "blade", "gift", "signet", "monolith", "gemstone", "clue", "scroll", "lantern", "collar", "talisman",
       "doodad", "bone", "vuvuzela", "handlebar moustache", "horseshoe", "sweater vest", "prawn", "#gameAccessory#", "veil", "shrubbery",
       "apron", "bow tie", "glove", "fanny pack", "loincloth", "#bodypart#", "saxophone", "birdcage", "balloon", "weathervane", "backpack",
-      "cactus", "spellbomb", "chair", "stepladder", "gravy boat", "memorial", "statue", "game", "relic", "ring", "appendage"
+      "cactus", "spellbomb", "chair", "stepladder", "gravy boat", "memorial", "statue", "game", "relic", "ring", "appendage", "#bodypart#"
   ],
   "placeNoun": [
       "temple", "palace", "castle", "garden", "market", "dungeon", "sanctuary", "mansion", "kingdom", "colony", "vacation rental", "graveyard",
