composite logo image; saving work

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -104,12 +104,21 @@ graphicAnnouncement:
 fromTheVaultGraphicAnnouncement:
 - "Wizards Announces: From the Vault: [_vaultContents:#_fromTheVaultVaultContents#]#_vaultContents.capitalize# {htmlImg htmlImgString=`#fromTheVaultLogoImage#`}"
 
+# novelSetGraphicAnnouncement:
+# - 'Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg
+#   htmlImgString=`#mtgSetLogoImage#` width=`600` height=`300` padding=`12` backgroundColor=`0x000000FF`}'
+# - "[_nextSet:The next set,The next fall set,#codename.capitalize#][_verbphrase:is
+#   actually,is really named,will be named]#_nextSet# #_verbphrase# [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg
+#   htmlImgString=`#mtgSetLogoImage#` width=`600`, height=`300` padding=`12` backgroundColor=`0x000000FF`}"
+
+
 novelSetGraphicAnnouncement:
 - 'Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg
-  htmlImgString=`#mtgSetLogoImage#` width=`600` height=`300` padding=`12` backgroundColor=`0x000000FF`}'
+  htmlImgString=`#mtgSetLogoImage#`}'
 - "[_nextSet:The next set,The next fall set,#codename.capitalize#][_verbphrase:is
   actually,is really named,will be named]#_nextSet# #_verbphrase# [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg
-  htmlImgString=`#mtgSetLogoImage#` width=`600`, height=`300` padding=`12` backgroundColor=`0x000000FF`}"
+  htmlImgString=`#mtgSetLogoImage#`}"
+
 
 realization:
 - "#realize#"
