--- a/src/data/grammar/mtg-set-logo-with-background.yaml
+++ b/src/data/grammar/mtg-set-logo-with-background.yaml
@@ -48,18 +48,18 @@ setLogoColorDark:
   - "DarkRed"
   - "Black"
 setLogoFontUnused:
- - "Drift Wood[_setLogoFontSize:72][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:75][_setLogoBaseline:middle]"
+ - "Drift Wood[_setLogoFontSize:72][_setLogoStrokeWidth:2][_setLogoFontWeight:normal]"
 setLogoFont:
-  - "Abandon[_setLogoFontSize:72][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:100][_setLogoBaseline:middle][_setLogoAdditionalStyles:letter-spacing#colon# 0.025em;]"
-  - "Action Is[_setLogoFontSize:100][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:85][_setLogoBaseline:bottom][_setLogoAdditionalStyles:,#_setLogoCustomStyleTextured#]"
-  - "Becker[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
+  - "Abandon[_setLogoFontSize:80][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:90][_setLogoBaseline:middle][_setLogoAdditionalStyles:letter-spacing#colon# 0.025em;]"
+  - "Action Is[_setLogoFontSize:100][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:83][_setLogoBaseline:bottom][_setLogoAdditionalStyles:,#_setLogoCustomStyleTextured#]"
+  - "Becker[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:77][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
   - "Beleren[_setLogoFontSize:90][_setLogoStrokeWidth:4,5,6][_setLogoFontWeight:bold][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
-  - "Empire State NF[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:99][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
-  - "Feast of Flesh BB[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:,#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
-  - "Fiendish[_setLogoFontSize:60][_setLogoStrokeWidth:3,4,5][_setLogoFontWeight:normal][_setLogoLineHeight:180][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
-  - "Jungle Fever NF[_setLogoFontSize:100][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:70][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
-  - "Kulkeuma[_setLogoFontSize:72][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
-  - "MEDICINE SHOW CAPS[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured# text-transform#colon# uppercase;,#_setLogoCustomStyleItalicized# text-transform#colon# uppercase;]"
+  - "Empire State NF[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:95][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
+  - "Feast of Flesh BB[_setLogoFontSize:96][_setLogoStrokeWidth:4][_setLogoFontWeight:bold][_setLogoLineHeight:86][_setLogoBaseline:bottom][_setLogoAdditionalStyles:,#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
+  - "Fiendish[_setLogoFontSize:60][_setLogoStrokeWidth:3,4,5][_setLogoFontWeight:normal][_setLogoLineHeight:118][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
+  - "Jungle Fever NF[_setLogoFontSize:100][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:80][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
+  - "Kulkeuma[_setLogoFontSize:72][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:65][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleItalicized#]"
+  - "MEDICINE SHOW CAPS[_setLogoFontSize:90][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:76][_setLogoBaseline:bottom][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured# text-transform#colon# uppercase;,#_setLogoCustomStyleItalicized# text-transform#colon# uppercase;]"
 fontTextureDirectoryUrl:
   - "http://pseudochaos.org/goodgamery/mtgnewsbot/images/textures/"
 fontTexture:
@@ -80,18 +80,32 @@ _setLogoCustomStyleItalicized:
 _setLogoFont:
   - "[#_setLogoFontColorSet#][_setLogoFontFace:#setLogoFont#]"
 _setLogoStyles:
-  - "text-align: center;line-height: #_setLogoLineHeight#%;"
+  - "text-align: center;line-height: #_setLogoLineHeight#px;"
 _cardsetDebug:
   - "#_cardset#"
 _setLogoTextStyles:
   - "-webkit-text-fill-color: #_setLogoFontColor#; -webkit-text-stroke-width: #_setLogoStrokeWidth#px; -webkit-text-stroke-color: #_setLogoStrokeColor#; font-size: #_setLogoFontSize#px; font-family: #_setLogoFontFace#;font-weight: #_setLogoFontWeight#; #_setLogoAdditionalStyles#"
+
+_mtgSetLogoImageLogoImage:
+- "./src/data/images/mtg-logos/mtg-small-logo-1.png"
+- "./src/data/images/mtg-logos/mtg-small-logo-2.png"
+
+mtgSetLogoMtgLogo: |
+  <table cellspacing="0" cellpadding="1">
+    <tr><td align="center" style="vertical-align: bottom;">  
+      <img src="#_mtgSetLogoImageLogoImage#"/>
+    </td></tr>
+
 mtgSetLogoImage: |
   [#_setLogoFont#]
-  <div style="display:table;">
-    <div style="height: 480px; width:720px; display:table-cell; text-align: center; align:center; padding:20px; margin: 0 auto; vertical-align: middle;">
-        <span style="border-radius: 10px; #_setLogoStyles# #_setLogoTextStyles#">#_cardsetDebug#</span>
-    </div>
-  </div>
+
+    <tr><td align="center" style="vertical-align: top; overflow: visible; width: 740px;">
+        <div style="width: 760px; vertical-align: top; overflow: visible; padding: 0 15px 20px 14px; #_setLogoStyles# #_setLogoTextStyles#">
+          #_cardsetDebug#
+        </div>
+    </td></tr>
+  </table>      
+
 
 veryNovelSetGraphicAnnouncement:
-- "Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=`#mtgSetLogoImage#` backgroundImage=`./src/data/images/setlogo/backgrounds/setlogo-background-1.jpg` }"
+- "Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=`#mtgSetLogoMtgLogo# #mtgSetLogoImage#` backgroundImage=`./src/data/images/setlogo/backgrounds/setlogo-background-1.jpg` }"
