--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -23,6 +23,9 @@ headline:
 - "#mtgDeckTechGraphic#"
 - "#cardCallout#"
 
+oncePerDay:
+  - "#cotdImage#"
+
 disabledHeadline: []
 
 testSvg: "#headlineKeepOrMulligan#"
