--- a/src/data/grammar/mtg-sets.yaml
+++ b/src/data/grammar/mtg-sets.yaml
@@ -27,6 +27,12 @@
       "Weatherlight",
       "Zendikar"
   ],
+  "randomCardSet": [
+    "#cardSet#",
+    "#cardSet#",
+    "#novelCardSetName#",
+    "#teaserCardSet#"
+  ],
   "recentCardSet": [
       "Amonkhet",
       "Hour of Devastation",
