--- a/src/data/grammar/numbers.yaml
+++ b/src/data/grammar/numbers.yaml
@@ -42,6 +42,17 @@
     ],
     "num1-99": [
         "#num1-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#",
+        "#num1-9##num0-9#"
+    ],
+    "num11-99": [
         "#num1-9##num0-9#"
     ],
     "num2-99": [
@@ -57,6 +68,7 @@
     "num0-9": ["0","1","2","3","4","5","6","7","8","9"],
     "num1-9": ["1","2","3","4","5","6","7","8","9"],
     "num2-9": ["2","3","4","5","6","7","8","9"],
+    "num0-4": ["0","1","2","3","4"],
     "num1-5": ["1","2","3","4","5"],    
     "num1-12": ["1","2","3","4","5","6","7","8","9","10","11","12"]
 }
