--- a/src/data/grammar/mtg-single-card-callout.yaml
+++ b/src/data/grammar/mtg-single-card-callout.yaml
@@ -2,14 +2,11 @@
 singleCardImageTest: >
   [_cardname:#realCard#]
   Your card is #_cardname#.
-  Debug: #_debug#
-  #cotdImage#
+  #singleCardImage#
 
 # Include this in other headlines that set a single _cardname variable
 singleCardImage: >
-  #pickRandomBGText#
-  #pickFgBgColors#
-  #pickRandomDegree#
+  #pickRandomBGText# #pickFgBgColors# #pickRandomDegree#
   {htmlImg htmlImgString=`#singleCardHtml#` screenWidth=`660` screenHeight=`330`}
 
 pickFgBgColors:
