--- a/src/data/grammar/creature-types.yaml
+++ b/src/data/grammar/creature-types.yaml
@@ -4,17 +4,28 @@
       "angel",
       "ant",
       "archer",
+      "antelope",
       "ape",
+      "assembly-worker",
+      "atog",
       "aurochs",
       "badger",
       "barbarian",
       "basilisk",
+      "bat",
+      "bear",
       "beast",
+      "beeble",
       "bird",
+      "blinkmoth",
+      "boar",
+      "brushwagg",
       "camel",
+      "cat",
       "centaur",
       "cephalid",
       "cleric",
+      "coward",
       "crab",
       "crocodile",
       "cyclops",
@@ -22,35 +33,70 @@
       "devil",
       "dinosaur",
       "djinn",
+      "druid",
       "dwarf",
+      "efreet",
+      "eldrazi",
       "elephant",
       "elemental",
-      "hippo",
-      "lhurgoyf",
       "elf",
       "faerie",
+      "fish",
+      "flagbearer",
       "fungus",
+      "gargoyle",
       "giant",
+      "gnome",
       "goat",
       "god",
       "goblin",
+      "golem",
+      "gorgon",
+      "hag",
+      "harpy",
       "hippo",
+      "homarid",
+      "homunculus",
+      "horror",
+      "horse",
       "illusion",
+      "imp",
+      "incarnation",
+      "insect",
+      "jackal",
+      "jellyfish",
+      "juggernaut",
+      "kavu",
+      "kithkin",
       "knight",
       "kobold",
       "kraken",
+      "leech",
+      "leviathan",
       "lhurgoyf",
+      "licid",
       "lizard",
       "lord",
+      "manticore",
+      "masticore",
+      "mercenary",
       "merfolk",
       "metathran",
+      "minion",
       "minotaur",
       "moonfolk",
+      "monger",
       "monkey",
+      "moonfolk",
+      "mutant",
+      "nightmare",
       "ninja",
       "noggle",
+      "nomad",
       "octopus",
+      "ogre",
       "ooze",
+      "oyster",
       "pegasus",
       "plant",
       "samurai",
