more creature types, P-Z

--- a/src/data/grammar/creature-types.yaml
+++ b/src/data/grammar/creature-types.yaml
@@ -98,27 +98,49 @@
       "ooze",
       "oyster",
       "pegasus",
+      "pirate",
       "plant",
+      "rat",
+      "rebel",
+      "rhino",
+      "rogue",
+      "salamander",
       "samurai",
+      "saproling",
       "satyr",
       "scarecrow",
+      "serf",
+      "serpent",
+      "shaman",
+      "shapeshifter",
+      "sheep",
       "skeleton",
       "snake",
+      "soldier",
       "sphinx",
       "spider",
       "spirit",
+      "sponge",
       "squid",
       "squirrel",
       "thopter",
+      "thrull",
       "treefolk",
       "turtle",
       "unicorn",
       "vampire",
+      "veldalken",
+      "wall",
+      "warrior",
+      "weird",
       "werewolf",
+      "whale",
       "wizard",
+      "wolf",
+      "worm",
+      "wurm",
       "yeti",
-      "zombie",
-      "eldrazi"
+      "zombie"
   ],
   "creatureTypesPlural": [
       "ants",
